@@ -8,6 +8,7 @@
 * added strbol validation
 * nil long options are now respected
 * refactored default_config to defaults in ConfigParser
+* refactored Validation register syntax
 
 == 0.5.0 / 2009-05-25
 
